--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "budo": "~7.1.0",
-    "gh-pages": "^0.11.0",
+    "gh-pages": "^0.11.0"
   },
   "repository": {
     "type": "git",
