--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "budo": "~7.1.0",
+    "budo-demo": "andyinabox/budo-demo",
     "gh-pages": "^0.11.0"
   },
   "repository": {
