--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "exdat": "^0.6.2",
+    "gl-matrix": "^2.3.2",
     "google-maps": "^3.2.1",
     "noisejs": "^2.1.0"
   },
