--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "exdat": "^0.6.2",
     "gl-matrix": "^2.3.2",
     "google-maps": "^3.2.1",
-    "noisejs": "^2.1.0"
+    "noisejs": "^2.1.0",
+    "raf": "^3.2.0"
   },
   "devDependencies": {
     "budo": "~7.1.0",
