--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "budo index.js --live --open --css styles.css",
-    "build": "budo-demo index.js -c styles.css",
+    "build": "budo-demo index.js -c styles.css -i assets",
     "deploy": "npm run build; gh-pages -d dist; npm run clean",
     "clean": "rm -r dist"
   },
