--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "budo index.js --live --open --css styles.css",
-    "build": "budo-demo index.js -c styles.css -i assets",
+    "start": "budo index.js --live --open --css styles.css --title 'pointing at the moon'",
+    "build": "budo-demo index.js -c styles.css -i assets -t 'pointing at the moon'",
     "deploy": "npm run build; gh-pages -d dist; npm run clean",
     "clean": "rm -r dist"
   },
