--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "moon-map-wanderer",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "start": "budo index.js -H localhost --live --open --css styles.css --title 'pointing at the moon'",
-    "build": "budo-demo index.js -c styles.css -i assets --minify --title 'pointing at the moon'",
+    "build": "budo-demo index.js -c styles.css -i assets --minify --title 'pointing at the moon' --cname pointingatthemoon.xyz",
     "deploy": "npm run build; gh-pages -d dist; npm run clean",
     "clean": "rm -r dist"
   },
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "budo": "~7.1.0",
-    "budo-demo": "andyinabox/budo-demo",
+    "budo-demo": "^0.0.5",
     "gh-pages": "^0.11.0"
   },
   "repository": {
