--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "moon-map-wanderer",
-  "version": "1.1.4",
-  "description": "",
+  "version": "1.1.5",
+  "description": "A finger pointing at the moon",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "start": "budo index.js -H localhost --live --open --css styles.css --title 'pointing at the moon'",
-    "build": "budo-demo index.js -c styles.css -i assets --minify --title 'pointing at the moon' --cname pointingatthemoon.xyz",
-    "deploy": "npm run build; gh-pages -d dist; npm run clean",
+    "build": "budo-demo index.js -c styles.css -i assets -m --title 'pointing at the moon'",
+    "cname": "mkdir -p dist; echo 'pointingatthemoon.xyz' > dist/CNAME",
+    "deploy": "npm run build; npm run cname; gh-pages -d dist; npm run clean",
     "clean": "rm -r dist"
   },
   "author": {
@@ -30,10 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/andyinabox/moon-map-wanderer.git"
+    "url": "git://github.com/andyinabox/pointing-at-the-moon.git"
   },
-  "homepage": "https://github.com/andyinabox/moon-map-wanderer",
-  "bugs": {
-    "url": "https://github.com/andyinabox/moon-map-wanderer/issues"
-  }
+  "homepage": "http://pointingatthemoon.xyz"
 }
