--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moon-map-wanderer",
+  "name": "pointing-at-the-moon",
   "version": "1.1.5",
   "description": "A finger pointing at the moon",
   "main": "index.js",
